--- a/index.html
+++ b/index.html
@@ -8,16 +8,46 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
     <h1>WELCOME TO</h1>
     <h1><span class="name-highlightt">MOHON</span> WORLD</h1>
     <h3>WEB DEV</h3>
     <P>Ami bhai msm er CTO but web dev er ko o pari na se jonno web dev seriously sikhte cesta kortesi. agami 2 month er modhe eta ses kore msm er jonno web banate hobe. Naile ami ses</P>
+    <a class="link-button" target="_blank" href="https://www.fb.com/">HIRE ME</a>
 </div>
 <div class="half-width">
     <img src="developer-portfolio/jhankar.png">
 </div>
     </section>
+    <section class="dream">
+        <div class="half-width">
+            <img src="developer-portfolio/jhankar2.png">
+        </div>
+        <div class="half-width">
+            <h3>GRAPHIC DESIGNER</h3>
+            <P>Ami bhai msm er CTO but web dev er ko o pari na se jonno web dev seriously sikhte cesta kortesi. agami 2 month er modhe eta ses kore msm er jonno web banate hobe. Naile ami ses</P>
+            <a class="link-button" target="_blank" href="https://www.fb.com/">HIRE ME</a>
+        </div>
+    </section>
+    <section class="last-section">
+       <h2>EXPERIENCES</h2>
+        <div id="WEB-exp" class="half-width single-exp">
+            <h3>WEB DEVELOPER</h3>
+            <h4 class="name-highlightt">2020-2021 i was DEV </h4>
+            <p>mi bhai msm er CTO but web dev er ko o pari na se jonno web dev seriously sikhte cesta kortesi.</p>
+        </div>
+        <div id="graphic-exp" class="half-width single-exp" >
+            <h3>GRAPHIC DESIGNER</h3>
+            <h4 class="name-highlightt">2020-2021 i was  </h4>
+            <p>mi bhai msm er CTO but web dev er ko o pari na se jonno web dev seriously sikhte cesta kortesi.</p>
+        </div>
+    </section>
+    <footer>
+        <p>
+            MOHON 2021 ALL RIGHT RESERVERD
+        </p>
+    </footer>
 </body>
+
 </html>
